--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola</title>
 </head>
 <body>
-    <p>Esta porqueria sirve, Parece que no, y ahora, ni vergas</p>
+    <p>Esta porqueria sirve, Parece que no, y ahora, ni vergas, no se como hacer con esta vaina</p>
 </body>
 </html>
